versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/custom-clusters.adoc
= Launching Kubernetes on Existing Custom Nodes
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2026-07-14
:page-revdate: {revdate}
:page-community-path: reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/index.adoc 
:page-product-path: cluster-deployment/custom-clusters/custom-clusters.adoc
:description: To create a cluster with custom nodes, you’ll need to access servers in your cluster and provision them according to Rancher requirements
ifeval::["{build-type}" != "community"]
:xref-node-reqs: xref:cluster-deployment/node-requirements.adoc
:xref-rke2-config: xref:cluster-deployment/configuration/rke2.adoc
:xref-use-windows-clusters: xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
:xref-access-cluster-kubectl: xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-clean-cluster-nodes: xref:cluster-admin/manage-clusters/clean-cluster-nodes.adoc
:xref-k3s-config: xref:cluster-deployment/configuration/k3s.adoc
:xref-k8s-concepts: xref:about-rancher/concepts.adoc
:xref-production-checklist: xref:cluster-deployment/production-checklist/production-checklist.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-node-reqs: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/node-requirements-for-rancher-managed-clusters.adoc
:xref-rke2-config: xref:reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc
:xref-use-windows-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/use-windows-clusters/index.adoc
:xref-access-cluster-kubectl: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-clean-cluster-nodes: xref:how-to-guides/new-user-guides/manage-clusters/clean-cluster-nodes.adoc
:xref-k3s-config: xref:reference-guides/cluster-configuration/rancher-server-configuration/k3s-cluster-configuration.adoc
:xref-k8s-concepts: xref:reference-guides/kubernetes-concepts.adoc
:xref-production-checklist: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/checklist-for-production-ready-clusters/index.adoc
endif::[]

When you create a custom cluster, Rancher can use RKE2/K3s to create a Kubernetes cluster in on-prem bare-metal servers, on-prem virtual machines, or in any node hosted by an infrastructure provider.

To use this option, you need access to the servers that will be part of your Kubernetes cluster. Provision each server according to the {xref-node-reqs}[requirements]. Then, run the command provided in the Rancher UI on each server to convert it into a Kubernetes node.

This section describes how to set up a custom cluster.

== Creating a Cluster with Custom Nodes

[NOTE]
.Want to use Windows hosts as Kubernetes workers?
====

See {xref-use-windows-clusters}[Configuring Custom Clusters for Windows] before you start.
====


=== 1. Provision a Linux Host

Begin creation of a custom cluster by provisioning a Linux host. Your host can be:

* A cloud-host virtual machine (VM)
* An on-prem VM
* A bare-metal server

If you want to reuse a node from a previous custom cluster, {xref-clean-cluster-nodes}[clean the node] before using it in a cluster again. If you reuse a node that hasn't been cleaned, cluster provisioning may fail.

Provision the host according to the {xref-node-reqs}[installation requirements] and the {xref-production-checklist}[checklist for production-ready clusters.]

[NOTE]
.IPv6-only cluster
====
For an IPv6-only cluster, ensure that your operating system correctly configures the `/etc/hosts` file.

[,shell]
----
::1       localhost
----
====

=== 2. Create the Custom Cluster

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Click *Custom*.
. Enter a *Cluster Name*.
. Use the *Cluster Configuration* section to set up the cluster. For more information, see {xref-rke2-config}[RKE2 Cluster Configuration Reference] and {xref-k3s-config}[K3s Cluster Configuration Reference].
+
[NOTE]
.Windows nodes
====
To learn more about using Windows nodes as Kubernetes workers, see {xref-use-windows-clusters}[Launching Kubernetes on Windows Clusters].
====
+
. Click *Create*.
+
*Result:* The UI redirects to the *Registration* page, where you can generate the registration command for your nodes.
+
. From *Node Role*, select the roles you want a cluster node to fill. You must provision at least one node for each role: etcd, worker, and control plane. A custom cluster requires all three roles to finish provisioning. For more information on roles, see {xref-k8s-concepts}#_roles_for_nodes_in_kubernetes_clusters[Roles for Nodes in Kubernetes Clusters].
+
[NOTE]
.Bare-Metal Server
====
If you plan to dedicate bare-metal servers to each role, you must provision a bare-metal server for each role (i.e., provision multiple bare-metal servers).
====
+
. *Optional:* Click *Show Advanced* to configure additional settings such as specifying the IP address(es), overriding the node hostname, or adding https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node.
+
[NOTE]
====
* The *Node Public IP* and *Node Private IP* fields can accept either a single address or a comma-separated list of addresses (for example: `10.0.0.5,2001:db8::1`).
====
+
[NOTE]
.IPv6-only or Dual-stack Cluster
====
* In both IPv6-only and dual-stack clusters, you should specify the node’s *IPv6 address* as the *Node Private IP*.
====
+
. Copy the command displayed on screen to your clipboard.
. Log in to your Linux host using your preferred shell, such as PuTTy or a remote Terminal connection. Run the command copied to your clipboard.

[NOTE]
====
Repeat steps 7-10 if you want to dedicate specific hosts to specific node roles. Repeat the steps as many times as needed.
====

*Result:*

The cluster is created and transitions to the *Updating* state while Rancher initializes and provisions cluster components.

You can access your cluster after its state is updated to *Active*.

*Active* clusters are assigned two Projects:

* `Default`, containing the `default` namespace
* `System`, containing the `cattle-system`, `traefik`, `kube-public`, and `kube-system` namespaces

=== 3. Amazon Only: Tag Resources

If you have configured your cluster to use Amazon as *Cloud Provider*, tag your AWS resources with a cluster ID.

https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html[Amazon Documentation: Tagging Your Amazon EC2 Resources]

[NOTE]
====

You can use Amazon EC2 instances without configuring a cloud provider in Kubernetes. You only have to configure the cloud provider if you want to use specific Kubernetes cloud provider functionality. For more information, see https://github.com/kubernetes/website/blob/release-1.18/content/en/docs/concepts/cluster-administration/cloud-providers.md[Kubernetes Cloud Providers]
====


The following resources need to be tagged with a `ClusterID`:

* *Nodes*: All hosts added in Rancher.
* *Subnet*: The subnet used for your cluster
* *Security Group*: The security group used for your cluster.

[NOTE]
====

Do not tag multiple security groups. Tagging multiple groups generates an error when creating Elastic Load Balancer.
====


The tag that should be used is:

[,shell]
----
Key=kubernetes.io/cluster/<CLUSTERID>, Value=owned
----

`<CLUSTERID>` can be any string you choose. However, the same string must be used on every resource you tag. Setting the tag value to `owned` informs the cluster that all resources tagged with the `<CLUSTERID>` are owned and managed by this cluster.

If you share resources between clusters, you can change the tag to:

[,shell]
----
Key=kubernetes.io/cluster/CLUSTERID, Value=shared
----

== Optional Next Steps

After creating your cluster, you can access it through the Rancher UI. As a best practice, we recommend setting up these alternate ways of accessing your cluster:

* *Access your cluster with the kubectl CLI:* Follow {xref-access-cluster-kubectl}#_accessing_clusters_with_kubectl_from_your_workstation[these steps] to access clusters with kubectl on your workstation. In this case, you will be authenticated through the Rancher server's authentication proxy, then Rancher will connect you to the downstream cluster. This method lets you manage the cluster without the Rancher UI.
* *Access your cluster with the kubectl CLI, using the authorized cluster endpoint:* Follow {xref-access-cluster-kubectl}#_authenticating_directly_with_a_downstream_cluster[these steps] to access your cluster with kubectl directly, without authenticating through Rancher. We recommend setting up this alternative method to access your cluster so that in case you can't connect to Rancher, you can still access the cluster.
